--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
